# game

./: .gitmodules  CMakeLists.txt  README.md  code_lookup.py  game.py  sovoq.sublime-workspace
resources/shaders/: sprite_fragment.glsl  sprite_vertex.glsl  virtual_screen_fragment.glsl  virtual_screen_vertex.glsl
src/retrocore/: CMakeLists.txt  libretro_interface.cpp
src/sovoqexe/: CMakeLists.txt  sovoq.cpp  sovoq_bak.cpp
src/standalone/: CMakeLists.txt  game.cpp
src/standalone/ogl/: program.cpp  program.h  program_manager.cpp  program_manager.h  shader.cpp  shader.h
src/standalone/sprites/: sprite.cpp  sprite.h
src/svq/: CMakeLists.txt  api.h  app.cpp  app.h  types.h
src/svq/gfx/: buffer_layout.cpp  buffer_layout.h  frame_buffer.cpp  frame_buffer.h  gl_batch_renderer_2d.cpp  gl_batch_renderer_2d.h  gl_program.cpp  gl_program.h  gl_program_manager.cpp  gl_program_manager.h  gl_shader.cpp  gl_shader.h  gl_sprite.h  index_buffer.cpp  index_buffer.h  renderable_2d.cpp  renderable_2d.h  renderer_2d.cpp  renderer_2d.h  sprite.cpp  sprite.h  texture.cpp  texture.h  utils.cpp  utils.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/svq/gfx/ogl/: gl_frame_buffer.cpp  gl_frame_buffer.h  gl_index_buffer.cpp  gl_index_buffer.h  gl_program.cpp  gl_program.h  gl_program_manager.cpp  gl_program_manager.h  gl_shader.cpp  gl_shader.h  gl_sprite.cpp  gl_texture.cpp  gl_texture.h  gl_vertex_array.cpp  gl_vertex_array.h  gl_vertex_buffer.cpp  gl_vertex_buffer.h
src/svq/math/: bbox2.h  vec2.h  vec3.h  vec4.h
